--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="getCitations">Get Citations</string>
+    <string name="downloading">Updating Quotes</string>
     <string name="descriptionActivity">Affichage des citations en séparant auteur et citation</string>
 
 </resources>
